Bug 1226015 - Have child send __delete__ in speech synth request protocol, fixes race. r=smaug