dom/media/webspeech/synth/ipc/SpeechSynthesisChild.h
@@ -52,9 +52,9 @@ public:
 protected:
   virtual bool RecvOnStart(const nsString& aUri) override;
 
-  virtual bool Recv__delete__(const bool& aIsError,
-                              const float& aElapsedTime,
-                              const uint32_t& aCharIndex) override;
+  virtual bool RecvOnEnd(const bool& aIsError,
+                         const float& aElapsedTime,
+                         const uint32_t& aCharIndex) override;
 
   virtual bool RecvOnPause(const float& aElapsedTime, const uint32_t& aCharIndex) override;
 
